2016-05-05  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Start implementation of `showFont'.

	* src/ftinspect.cpp (MainGUI::loadFonts): Call `showFont'.
	(MainGUI:closeFont): Fix logic and call `showFont'.
	(MainGUI::showFont): New method.  Doesn't display something yet, but
	font navigation buttons are fully functional now.
	(MainGUI::previousFont, MainGUI::nextFont, MainGUI::previousFace,
	MainGUI::nextFace, MainGUI::previousInstance,
	MainGUI::nextInstance): Call `showFont'.

	* src/ftinspect.h (MainGUI): Updated.

2016-05-05  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add methods to get number of faces and instances.

	* src/ftinspect.cpp (Engine::numFaces, Engine::numInstances): New
	methods.

	* src/ftinspect.h (Engine): Updated.

2016-05-05  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.cpp (faceRequester): Use reference.
	(MainGUI::loadFonts): Simplify.

2016-05-05  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Make `MainGUI' and `Engine' classes more symmetric.

	Also avoid `const' issues.

	* src/ftinspect.h (Engine): Add `gui' field.
	Updated.
	(MainGUI): Don't use `const' for `engine'.
	Updated.

	* src/ftinspect.cpp (Engine::Engine, Engine::update): Updated.
	(MainGUI::update, main): Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add buttons for instances.

	* src/ftinspect.cpp (MainGUI::checkCurrentInstanceIndex,
	MainGUI::previousInstance, MainGUI::nextInstance): New methods.
	(MainGUI::createLayout): Updated.  We now use a grid layout for the
	font buttons.
	(MainGUI::createConnections, MainGUI::setDefaults): Updated.

	* src/ftinspect.h: Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Redesign font handling.

	At this early stage, it's not always clear to me how to do things
	correctly, so here's another try.

	* src/ftinspect.h (Font): Redesigned, using a list of 
	instance numbers.
	(FaceID): New structure, for communication with the face requester.